--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/React?createDatabaseIfNotExist=true
 server.port=8082
 spring.datasource.username=root
-spring.datasource.password=yassine150
+spring.datasource.password=
 spring.jpa.show-sql: true
 spring.sql.init.mode=always
 springdoc.api-docs.path=/api-docs
